fixing colours in dark mode and about us page

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,9 @@
 $grey: #5C5C5C;
 $radius-sm: 4px;
 $transition: 0.12s ease-in-out;
+$black: #18171b;
+$blue: #6b62ff;
+
 
 body {
   background: #F6F6F6;
@@ -8,7 +11,7 @@ body {
   padding: 0px;
   margin: 0px;
   @media (prefers-color-scheme: dark) {
-    background: #070609;
+    background: $black;
   }
 }
 
@@ -24,7 +27,10 @@ nav {
   display: flex;
   justify-content: space-around;
   @media (prefers-color-scheme: dark) {
-    background: rgba(0,0,0,0.9);
+    background: rgba(0,0,0,0.42);
+  }
+  @media only screen and (max-width: 800px) {
+    padding: 4px 0px;
   }
 
   a {
@@ -35,10 +41,19 @@ nav {
     color: $grey;
     border-radius: $radius-sm;
     transition: $transition;
+    @media (prefers-color-scheme: dark) {
+      color: rgba(255,255,255,0.42)
+    }
+    &.active {
+      color: $black;
+      @media (prefers-color-scheme: dark) {
+        color: rgba(255,255,255,0.8);
+      }
+    }
    &:hover {
       background: rgba(0,0,0,0.1);
       @media (prefers-color-scheme: dark) {
-        background: rgba(255,255,255,0.1);
+        background: $black;
       }
     }
     &.icon {
@@ -47,6 +62,9 @@ nav {
       display: flex;
       align-items: center;
       justify-content: center;
+      svg {
+        fill: $grey;
+      }
       img {
         transition: $transition;
         width: auto;
@@ -54,13 +72,14 @@ nav {
       }
       &:hover {
         background: none;
-        img {
+        img, svg {
           transform: scale(1.1);
         }
       }
     }
   }
 }
+
 
 .container {
 background: #ffffff;
@@ -70,7 +89,7 @@ position: relative;
   padding: 20px;
 }
 @media (prefers-color-scheme: dark) {
-  background: #070609;
+  background: $black;
 }
 }
 
@@ -85,9 +104,9 @@ header {
 
   h1 {
     font-size: 56px;
-    color: black;
+    color: $black;
     @media (prefers-color-scheme: dark) {
-      color: rgba(255,255,255,0.9);
+      color: rgba(255,255,255,0.8);
     }
     @media only screen and (max-width: 800px) {
         font-size: 40px;
@@ -100,7 +119,7 @@ header {
     font-size: 56px;
     color: rgba(0,0,0,0.5);
     @media (prefers-color-scheme: dark) {
-      color: rgba(255,255,255,0.3);
+      color: rgba(255,255,255,0.42);
     }
     max-width: 1280px;
     a {
@@ -131,7 +150,7 @@ header {
   z-index: 0;
   transform: scale(0.8);
   &.blue {
-    background: #0E00FF;
+    background: $blue;
     width: 560px;
     height: 560px;
     top: 40px;
@@ -167,13 +186,12 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   margin:0 -24px;
-
 }
 
 .work-card {
   @media (prefers-color-scheme: dark) {
     color: rgba(255,255,255,0.3);
-    background: rgba(255,255,255,0.04);
+    background: rgba(255,255,255,0.08);
   }
   position: relative;
   overflow: hidden;
@@ -205,10 +223,7 @@ header {
     z-index: 2;
     top: 24px;
     right: 24px;
-    color: #0E00FF;
-    @media (prefers-color-scheme: dark) {
-      color: #4941d9;
-    }
+    color: $blue;
     font-size: 12px;
     max-width: 80px;
     @media only screen and (max-width: 800px) {
@@ -219,6 +234,9 @@ header {
   h3 {
     margin-top: 0px;
     margin-bottom: 8px;
+    @media (prefers-color-scheme: dark) {
+      color: rgba(255,255,255,0.96);
+    }
   }
 
   p {
@@ -227,6 +245,11 @@ header {
     font-size: 12px;
     opacity: 0.4;
     text-shadow: 0px 1px 0px rgba(255,255,255,1);
+    @media (prefers-color-scheme: dark) {
+      opacity: 0.6;
+      color: white;
+      text-shadow: none;
+    }
   }
 
   &.third {
@@ -295,4 +318,36 @@ header {
   height: auto;
   background: rgba(0,0,0,0.8);
   box-shadow: 0px 0px 4px 4px rgba(0,0,0,1);
+}
+
+
+#about {
+  align-items: center;
+  padding-top: 4px;
+  padding-bottom: 36px;
+
+p {
+  margin: 48px auto;
+  max-width: 800px;
+  font-size: 28px;
+  line-height: 48px;
+  color: $grey;
+  a {
+    color: $blue;
+    @media (prefers-color-scheme: dark) {
+      color: #6b62ff;
+    }
+  }
+}
+
+.signature {
+  position: relative;
+  font-size: 48px;
+  font-family: 'Caveat', cursive;
+  left: 12px;
+  color: $black;
+  @media (prefers-color-scheme: dark) {
+    color: rgba(255,255,255,0.9);
+  }
+}
 }
